[package]
name = "heed"
version = "0.20.0-alpha.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A fully typed LMDB wrapper with minimum overhead"
license = "MIT"
repository = "https://github.com/Kerollmops/heed"
keywords = ["lmdb", "database", "storage", "typed"]
categories = ["database", "data-structures"]
readme = "../README.md"
edition = "2021"

[dependencies]
aead = "0.5.1"
bytemuck = "1.12.1"
byteorder = { version = "1.4.3", default-features = false }
generic-array = { version = "0.14.6", features = ["serde"] }
heed-traits = { version = "0.20.0-alpha.0", path = "../heed-traits" }
heed-types = { version = "0.20.0-alpha.0", path = "../heed-types" }
libc = "0.2.139"
lmdb-master3-sys = { version = "0.1.0", path = "../lmdb-master3-sys" }
once_cell = "1.16.0"
page_size = "0.5.0"
serde = { version = "1.0.151", features = ["derive"], optional = true }
synchronoise = "1.0.1"

[dev-dependencies]
argon2 = { version = "0.4.1", features = ["std"] }
bytemuck = { version = "1.12.1", features = ["derive"] }
chacha20poly1305 = "0.10.1"
serde = { version = "1.0.144", features = ["derive"] }
tempfile = "3.3.0"

[target.'cfg(windows)'.dependencies]
url = "2.3.1"

[features]
# The `serde` feature makes some types serializable,
# like the `EnvOpenOptions` struct.
default = ["serde", "serde-bincode", "serde-json"]

# The NO_TLS flag is automatically set on Env opening and
# RoTxn implements the Sync trait. This allow the user to reference
# a read-only transaction from multiple threads at the same time.
sync-read-txn = []

# Enable the serde en/decoders for bincode or serde_json
serde-bincode = ["heed-types/serde", "heed-types/bincode"]
serde-json = ["heed-types/serde", "heed-types/serde_json"]

# serde_json features
preserve_order = ["heed-types/preserve_order"]
arbitrary_precision = ["heed-types/arbitrary_precision"]
raw_value = ["heed-types/raw_value"]
unbounded_depth = ["heed-types/unbounded_depth"]

# Whether to tell LMDB to use POSIX semaphores during compilation
# (instead of the default, which are System V semaphores).
# POSIX semaphores are required for Apple's App Sandbox on iOS & macOS,
# and are possibly faster and more appropriate for single-process use.
# There are tradeoffs for both POSIX and SysV semaphores; which you
# should look into before enabling this feature. Also, see here:
# <https://github.com/LMDB/lmdb/blob/3947014aed7ffe39a79991fa7fb5b234da47ad1a/libraries/liblmdb/lmdb.h#L46-L69>
posix-sem = ["lmdb-master3-sys/posix-sem"]
